index 2 design change

--- a/index2.html
+++ b/index2.html
@@ -9,13 +9,23 @@
 	<!-- <script src="https://kit.fontawesome.com/429f7d068c.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
+	<header class="">
+		<h1>Gaurav Heda</h1>
+		<p>The Fast Loading Homepage.</p>
+	</header>
 	<main>
-		<section class="my-bg">
-			
+		<!-- <section class="my-bg"></section> -->
+		<section class="my-img">
+			<!-- <img src="./assets/images/house.jpg" alt=""> -->
+			<!-- <img src="./assets/images/kristen.png" alt=""> -->
+			<img src="./assets/images/avatar.png" alt="">
+			<div>
+				<h4>Hie Readers lorem ksiurj</h4>
+
+			</div>
+
 		</section>
-		<div class="about-me">
-				this is about me.
-		</div>
+		
 		<section class="social">
 			<a href="#"><i class="fa fa-facebook-official"></i></a>
 			<a href="#"><i class="fa fa-instagram"></i></a>
