--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,8 @@
 			<img src="./assets/images/avatar.png" alt="">
 			<div>
 				<h4>Hie Readers lorem ksiurj</h4>
-
+				<p>second line second line second line</p>
+				<p>third line second line second line</p>
 			</div>
 
 		</section>
